Ampliando vistas del Presidente

--- a/app/views/partials/president/navbar.html
+++ b/app/views/partials/president/navbar.html
@@ -31,7 +31,7 @@
 			</li>
 			      
 			<li class="nav-item">
-			    <a class="nav-link disabled" href="#">Disabled</a>
+			    <a class="nav-link" href="/president/nucleos">Nucleos</a>
 			</li>
 		</ul>
 
