--- a/app/views/president/nucleos/index.html
+++ b/app/views/president/nucleos/index.html
@@ -10,13 +10,19 @@
 	<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
 	<!-- Custom styles for this template -->
     <link href="/css/sticky-footer-navbar.css" rel="stylesheet">
+    <style type="text/css">
+    	.anyClass {
+		  height: 550px;
+		  overflow-y: scroll;
+		}
+    </style>
 </head>
 <body>
 	<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
 		<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
 	</div>	
 
-	<%- include('../../../partials/president/navbar.html') %>
+	<%- include('../../partials/president/navbar.html') %>
 
 	<div class="container-fluid">
 		<div class="row justify-content-md-center">
@@ -25,7 +31,7 @@
 				<nav aria-label="breadcrumb" style="margin-top: 1%">
 					<ol class="breadcrumb">
 					    <li class="breadcrumb-item" aria-current="page">Home</li>
-					    <li class="breadcrumb-item active" aria-current="page">Eval. en Proceso</li>
+					    <li class="breadcrumb-item active" aria-current="page">Nucleos</li>
 					</ol>
 				</nav>
 			</div>
@@ -58,6 +64,7 @@
 								
 							</div>
 						</div>
+						<br>
 					</div>
 				</div>
 			</div>
@@ -65,44 +72,45 @@
 			<!--=============Contenido=============-->
 			<div class="col-md-9">
 				<div class="row">
-					<div class="col-md-12">
+					<!--tabla con todos los Nucleos-->
+					<div class="col-md-6">
 						<div class="card">
-							<div class="card-body">
+							<div class="card-body anyClass">
 								<div class="article border-bottom">
-									<h3>Evaluaciones en Proceso</h3>
+									<h3>Nucleos</h3>
 								</div>
 								<table class="table">
 									<thead>
 										<tr>
 											<th>#</th>
-											<th scope="col">Nombre de Eval</th>
 											<th scope="col">Nucleo</th>
-									      	<th scope="col">Unidad</th>
+											
 									      	<th scope="col">Acción</th>
 									    </tr>
 									</thead>
-								  	<tbody>
-										<% for(let i = 0; i < evalProceso.length; i ++) {%>
+									<tbody>
+										<%for(let i = 0; i < Nucleo.length; i ++) {%>
+											<% var h = 0 %>
 											<tr>
-												<td>1</td>
-												<td><%- evalProceso[i].nombre %></td>
-												<td><%- evalProceso[i].nucleo.nombre %></td>
-												<td><%- evalProceso[i].unidad.nombre %></td>
-												<td>
-													<a href="/president/detalles/<%= evalProceso[i].id %>" class="btn btn-primary">Ver</a>
-												</td>
+												<td><%- i + 1 %></td>
+												<td><%- Nucleo[i].nombre %></td>
+												<td><a href="/president/nucleos/<%- Nucleo[i].codigo %>" class="btn btn-primary">Ver</a></td>
 											</tr>
 										<%}%>
-								  	</tbody>
+									</tbody>
 								</table>
 							</div>
 						</div>
+					</div>
+
+					<!--columna vacia-->
+					<div class="col-md-6">	
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-
+	<br>
 	<footer class="footer" style="background: #BEBCB0;">
 		<div class="container">
 			<span class="text-muted">Pie de Pagina</span>
