Trabajando en cambiar CoordP

--- a/app/views/president/index.html
+++ b/app/views/president/index.html
@@ -269,7 +269,8 @@
 										  						<p style="margin: 2px" class="text-muted"><em>C.I: <%- coordPlani.cedula %></em></p>
 															</div>
 															<div class="col-sm-2 col-md-2">
-																<a href="/president/cambiar_coordP/<%- coordPlani.cedula %>" class="btn btn-light btn-sm edit-eval">
+																<!--<a href="/president/cambiar_coordP/<%- coordPlani.cedula %>" class="btn btn-light btn-sm edit-eval">-->
+																	<a href="/president/cambiar_coordP" class="btn btn-light btn-sm edit-eval">
 															        <span class="glyphicon glyphicon-log-in"></span><i class="fa fa-exchange"></i>
 															    </a>
 															</div>
