--- a/app/views/president/cambiar/index.html
+++ b/app/views/president/cambiar/index.html
@@ -86,9 +86,28 @@
 												<img src="/images/img/user.png" alt="" class="img-thumbnail">
 											</div>
 											<div class="col-sm-8 col-md-7 col-lg-8">
-												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Nombre: </b>{{ coord.nombre }}</p>
-												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Apellido: </b>{{ coord.apellido }}</p>
-												<p style="margin-bottom: 3px; font-size: 15pt;"><b>C.I: </b>{{ coord.cedula }}</p>
+												<fieldset disabled>
+													<div class="form-group row">
+													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre</label>
+													    <div class="col-sm-9">
+													    	<input type="text" class="form-control form-control-sm" v-model="coord.nombre">
+													    </div>
+													</div>
+
+													<div class="form-group row">
+													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido</label>
+													    <div class="col-sm-9">
+													    	<input type="text" class="form-control form-control-sm" v-model="coord.apellido">
+													    </div>
+													</div>
+
+													<div class="form-group row">
+													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I</label>
+													    <div class="col-sm-9">
+													    	<input type="text" class="form-control form-control-sm" v-model="coord.cedula">
+													    </div>
+													</div>
+												</fieldset>
 											</div>
 										</div>
 									</div>
@@ -110,14 +129,42 @@
 												<img src="/images/img/user.png" alt="" class="img-thumbnail">
 											</div>
 											<div class="col-sm-8 col-md-7 col-lg-8">
-												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Nombre: </b>{{ usuario.nombre }}</p>
-												<p style="margin-bottom: 3px; font-size: 15pt;"><b>Apellido: </b>{{ usuario.apellido }}</p>
-												<p style="margin-bottom: 3px; font-size: 15pt;"><b>C.I: </b>{{ usuario.cedula }}</p>
+												<fieldset disabled>
+													<div class="form-group row">
+													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Nombre</label>
+													    <div class="col-sm-9">
+													    	<input type="text" class="form-control form-control-sm" v-model="usuario.nombre">
+													    </div>
+													</div>
+
+													<div class="form-group row">
+													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">Apellido</label>
+													    <div class="col-sm-9">
+													    	<input type="text" class="form-control form-control-sm" v-model="usuario.apellido">
+													    </div>
+													</div>
+
+													<div class="form-group row">
+													    <label for="colFormLabelSm" class="col-sm-3 col-form-label col-form-label-sm">C.I</label>
+													    <div class="col-sm-9">
+													    	<input type="text" class="form-control form-control-sm" v-model="usuario.cedula">
+													    </div>
+													</div>
+												</fieldset>
 											</div>
 										</div>
 									</div>
 								</div>
 							</div>
+
+							<div class="col-md-12">
+								<hr>
+								<form onsubmit="return confirm('¿Esta Seguro de Reemplazar al Corrd. Planificación?')" method="POST" action="/hola">
+									<div class="form-group" v-if="variable">
+										<input type="submit" name="cambiar" value="Reemplazar" class="btn btn-primary btn-block btn-lg">	
+									</div>
+								</form>
+							</div>				
 						</div>
 					</div>
 				</div>		
@@ -144,7 +191,8 @@
 			data: {
 				cedula: '',
 				usuario: {},
-				coord: {}
+				coord: {},
+				variable: false
 			}, 
 			created() {
 				this.getCoordP()
@@ -165,6 +213,7 @@
 						axios.get('/getUsuario/' + cedula)
 							.then(res => {
 								this.usuario = res.data;
+								this.variable = true
 								this.cedula = ''
 							}).catch(err => {
 								console.log(err)
