--- a/app/views/president/index.html
+++ b/app/views/president/index.html
@@ -144,7 +144,7 @@
 												</div>
 										    	
 										  	</div>
-										  	<a href="#">
+										  	<a href="/president/evalCulmi">
 												<div class="card-footer text-muted">
 		    										2 days ago
 		  										</div>
