--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -57,27 +57,47 @@
 									<br>		
 								</div>
 								
-								<% if(Calificacion.length == dataUser.length) {%>
+								<% if((Calificacion.length == dataUser.length) && (!califiUni)) {%>
 									<div class="col-sm-12 col-md-6 col-lg-12">
 										<div class="card">
 											<div class="card-header">
 												Calificación de Unidad
 											</div>
 											<div class="card-body">
-												<form @submit.prevent="sendCalifi">
+												<form method="POST" action="/president/califiUnidad/<%- infoEval.id %>">
 													<div class="col-md-12">
 														<div class="row">	
 															<div class="col-md-4 text-center">
 																	<%- ((acomulado.toFixed(2) * 10) / (dataUser.length * 10)).toFixed(2)  %> Ptos
 															</div>
 															<div class="col-md-8 text-center">
-																<template v-if="save === false">
-																	<input type="submit" name="guardar" value="Guardar">	
-																</template>
+																<input type="hidden" name="value" value="<%- ((acomulado.toFixed(2) * 10) / (dataUser.length * 10)).toFixed(2)  %>">
+																<input type="submit" name="guardar" value="Guardar">
 															</div>		
 														</div>
 													</div>
 												</form>	
+											</div>
+										</div>
+										<br>
+									</div>
+								<%} else if((Calificacion.length == dataUser.length) && (califiUni)) {%>
+									<div class="col-sm-12 col-md-6 col-lg-12">
+										<div class="card">
+											<div class="card-header">
+												Calificación de Unidad
+											</div>
+											<div class="card-body">
+												
+													<div class="col-md-12">
+														<div class="row">	
+															<div class="col-md-4 text-center">
+																	<%- ((acomulado.toFixed(2) * 10) / (dataUser.length * 10)).toFixed(2)  %> Ptos
+															</div>
+																
+														</div>
+													</div>
+												
 											</div>
 										</div>
 										<br>
