Mostrando detalles Generales de una Unidad

--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -72,6 +72,7 @@
 															</div>
 															<div class="col-md-8 text-center">
 																<input type="hidden" name="value" value="<%- ((acomulado.toFixed(2) * 10) / (dataUser.length * 10)).toFixed(2)  %>">
+																<input type="hidden" name="unidad" value="<%- infoEval.unidadCodigo %>">
 																<input type="submit" name="guardar" value="Guardar">
 															</div>		
 														</div>
