--- a/app/views/coord_ev/eventos/index.html
+++ b/app/views/coord_ev/eventos/index.html
@@ -53,7 +53,101 @@
 
 					<div class="col-md-9">
 						<div class="row">
-							
+							<div class="col-lg-5">
+								<div class="card">
+									<div class="card-body">
+										<div class="article border-bottom">
+											<h3>Planificar Evento</h3>
+										</div>
+										<form method="POST" action="">
+											<div class="form-row">
+											    <div class="form-group col-md-6">
+											      <label for="nombre">Nombre:</label>
+											      <input type="text" class="form-control" placeholder="Ingrese el Nombre o Titulo del Evento">
+											    </div>
+											    <div class="form-group col-md-6">
+											      <label for="direccion">Dirección:</label>
+											      <input type="text" class="form-control" placeholder="Ingrese la Dirección">
+											    </div>
+											</div>
+
+											<div class="form-row">
+											    <div class="form-group col-md-6">
+											      	<label>Fecha:</label>
+													<input type="date" name="fecha" class="form-control">
+											    </div>
+											    <div class="form-group col-md-6">
+											      <label>Nucleo: </label>
+													<select name="nucleo" class="form-control">
+														<option disabled value="">Please select one</option>
+														<option>...</option>
+													</select>
+											    </div>
+											</div>
+
+											<div class="form-row">
+											    <div class="form-group col-md-4">
+											      	<label>Dirigido a:</label>
+													<input type="text" name="publico" class="form-control" placeholder="Publico">
+											    </div>
+											    <div class="form-group col-md-4">
+											      <label>Tipo:</label>
+													<select name="tipo" class="form-control">
+														<option disabled value="">Please select one</option>
+														<option>Nacional</option>
+														<option>Taller</option>
+													</select>
+											    </div>
+											    <div class="form-group col-md-4">
+											      	<label>Cupos:</label>
+													<input type="number" name="cupos" class="form-control">
+											    </div>
+											    <div class="form-group col-md-12">
+												  	<label for="descripcion">Descripción:</label>
+												  	<textarea class="form-control" rows="5" name="descripcion"></textarea>
+												</div>
+											</div>
+
+											<div class="form-row">
+												<div class="form-group col-md-12">
+													<input type="file" name="img" class="form-control">
+												</div>
+											</div>
+
+											<hr>
+
+											<input type="submit" name="guardar" value="Guardar" class="btn btn-primary">
+										</form>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-lg-7">
+								<div class="card">
+									<div class="card-body">
+										<div class="article border-bottom">
+											<h3>Eventos Planificados</h3>
+										</div>
+										<table class="table">
+											<thead>
+												<th style="width: 6%">#</th>
+												<th>Nombre</th>
+												<th style="width: 30%">Acción</th>
+											</thead>
+											<tbody>
+												<tr>
+													<td>1</td>
+													<td>Evento Ejemplo 1</td>
+													<td>
+														<a href="" class="btn btn-warning btn-xs">Edit</a>
+														<a href="" class="btn btn-danger btn-xs">Delete</a>
+													</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
